# synctools

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: moku.py
notebooks/: 0.1_sync_signals.ipynb  0.2_three-signals.ipynb  0.3_sync_multiple_twosignals.ipynb
synctools/: __init__.py  auxiliary.py  clock.py  frequency.py  signals.py  synchronization.py  timer.py
tests/: README.md  __init__.py  conftest.py  test_auxiliary.py  test_clock.py  test_frequency.py  test_signals.py  test_sync.py  test_timer.py
